# football-matches-prediction

./: .gitignore  Makefile  dataset.ipynb  dualemb.ipynb  eloe.ipynb  elog.ipynb  experiment-dualemb.ipynb  experiment-eloe.ipynb  experiment.ipynb  mlflow_experiment.py  pyproject.toml
data/: brazil_matches.csv  europe_matches.csv  libertadores_matches.csv  national_teams.csv
src/: dataset.py  utils.py
src/models/: base.py  dualemb.py  eloe.py  elog.py  freq.py  frequency_random.py  tmfm.py  uni.py  uniform_random.py
tests/: test_dataset.py
tests/models/: conftest.py  test_base.py  test_dualemb.py  test_elog.py  test_freq.py  test_uni.py
